# humanlike-ai-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/agents/: __init__.py  orchestrator.py  personality.py
app/api/: auth.py  chat.py  errors.py  health.py  middleware.py  rag.py  schemas.py  voice.py
app/core/: circuit_breaker.py  config.py  exceptions.py  logging.py  observability.py  rate_limit.py  security.py
app/digital_human/: __init__.py  event_stream.py
app/integrations/: google_oauth.py  slack_router.py  telegram_router.py
app/memory/: __init__.py  long_term.py  manager.py  short_term.py  summary.py
app/perception/: __init__.py  sentiment.py
app/rag/: __init__.py  bm25_retriever.py  chroma_retriever.py  chunker.py  document_store.py  embeddings.py  faiss_retriever.py  fusion.py  hybrid_retriever.py  reranker.py
app/tools/: __init__.py  google_calendar_tool.py  google_tasks_tool.py  messaging_tool.py  rag_tool.py  registry.py  time_tool.py  web_search_tool.py
app/voice/: __init__.py  tts.py  voice_clone.py
data/sample_docs/: about_aria.md
infra/ecs/: task-definition.json
infra/k8s/: deployment.yaml  secret.example.yaml
infra/otel/: cloudwatch_dashboard.json  otel-collector-config.yaml
personalities/: companion.yaml  playful.yaml  professional.yaml
scripts/: benchmark_rag.py  seed_documents.py
tests/: conftest.py  test_agent_routing.py  test_auth.py  test_circuit_breaker.py  test_health.py  test_memory.py  test_personality.py  test_rag_fusion.py  test_slack_signature.py
