[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humanlike-ai-agent"
version = "0.1.0"
description = "Production-grade human-like AI agent with personality, memory, hybrid RAG, and multi-modal capabilities"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Harry" }]

dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "python-multipart==0.0.19",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt<5",
    "slowapi==0.1.9",
    "pybreaker==1.2.0",
    "tenacity==9.0.0",
    "httpx==0.28.1",
    "sse-starlette==2.1.3",
    "openai==1.58.1",
    "tiktoken==0.8.0",
    "langchain==0.3.13",
    "langchain-openai==0.2.14",
    "langchain-community==0.3.13",
    "langchain-core==0.3.28",
    "rank-bm25==0.2.2",
    "faiss-cpu==1.9.0.post1",
    "chromadb>=0.6.0,<1.2",
    "sentence-transformers>=3.3.1,<4",
    "transformers>=4.47.1,<5",
    "torch==2.5.1",
    "numpy==1.26.4",
    "scikit-learn==1.6.0",
    "python-telegram-bot==21.9",
    "slack-bolt==1.22.0",
    "slack-sdk==3.34.0",
    "google-api-python-client==2.157.0",
    "google-auth==2.37.0",
    "google-auth-oauthlib==1.2.1",
    "google-auth-httplib2==0.2.0",
    "azure-cognitiveservices-speech==1.42.0",
    "opentelemetry-api==1.29.0",
    "opentelemetry-sdk==1.29.0",
    "opentelemetry-instrumentation-fastapi==0.50b0",
    "opentelemetry-instrumentation-httpx==0.50b0",
    "opentelemetry-exporter-otlp==1.29.0",
    "structlog==24.4.0",
    "redis==5.2.1",
    "pyyaml==6.0.2",
    "duckduckgo-search==6.4.2",
    "beautifulsoup4==4.12.3",
    "pypdf==5.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
    "ruff==0.8.4",
    "mypy==1.14.0",
    "types-pyyaml==6.0.12.20240917",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "ASYNC", "C4", "PIE", "PT", "RET", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --cov=app --cov-report=term-missing"
